testsuite/tests/properties/invalid_analysis_unit_expr/test.out
== Invalid field ==
test.py:25: error: Type AnalysisUnit has no 'foobar' field or property

Done
